force-app/main/default/objects/AccountRevenue__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Revenues</relationshipLabel>
        <relationshipName>AccountRevenues</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ActualFYRevenues__c</fullName>
        <label>Actual FY Revenues</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>FiscalYear__c</fullName>
        <label>Fiscal Year</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>FY16</fullName>
                </value>
                <value>
                    <fullName>FY17</fullName>
                </value>
                <value>
                    <fullName>FY18</fullName>
                </value>
                <value>
                    <fullName>FY19</fullName>
                </value>
                <value>
                    <fullName>FY20</fullName>
                </value>
                <value>
                    <fullName>FY21</fullName>
                </value>
                <value>
                    <fullName>FY22</fullName>
                </value>
                <value>
                    <fullName>FY23</fullName>
                </value>
                <value>
                    <fullName>FY24</fullName>
                </value>
                <value>
                    <fullName>FY25</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PreviousFYRevenues__c</fullName>
        <label>Previous FY Revenues</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TargetFYRevenues__c</fullName>
        <label>Target FY Revenues</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <label>Account Revenue</label>
    <nameField>
        <displayFormat>ACCREV-{0000}</displayFormat>
        <label>Account Revenue ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Revenues</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>